Version 3.4.x (2011-xx-xx)
	Fixed bug where selection of table cells would produce an exception on Gecko.
	Fixed bug where the caret wasn't properly rendered on Gecko when the editor was hidden.
	Fixed bug where pasting plain text into WebKit would produce a pre element it will now produce more semantic markup.
Version 3.4.3.1 (2011-06-16)
	Fixed bug where listboxes were not being handled correctly by JAWS in firefox with the o2k7 skin.
	Fixed bug where custom buttons were not being rendered correctly when in high contrast mode.
	Added support for iOS 5 that now supporting contentEditable in it's latest beta.
	Fixed bug where urls in style attributes with a _ character followed by a number would cause incorrect output.
	Fixed bug where custom_elements option wasn't working properly on IE browsers.
	Fixed bug where custom_elements marked as block elements wouldn't get correctly treated as block elements.
	Fixed bug where attributes with </> wasn't properly encoded as XML entities.
Version 3.4.3 (2011-06-09)
	Fixed bug where deleting backwards before an image into a list would put the cursor in the wrong location.
	Fixed bug where styles plugin would not apply styles across multiple selected block elements correctly.
	Fixed bug where cursor would jump to start of document when selection contained empty table cells in IE8.
	Fixed bug where applied styles wouldn't be kept if you pressed enter twice to produce two paragraphs.
	Fixed bug where a ghost like caret would appear on Gecko when pressing enter while having a text color applied.
	Fixed bug where IE would produce absolute urls if you inserted a image/link and reloaded the page.
	Fixed bug where applying a heading style to a list item would cascade style to children list items.
	Fixed bug where Editor loses focus when backspacing and changing styles in WebKit.
	Fixed bug where exception was thrown in tinymce.util.URI when parsing a relative URI and no base_uri setting was provided.